# voyeur

./: .gitignore  AGENTS.md  Dockerfile  Jenkinsfile  README.md  dockerfile-consumer  mac_cleanup_commands.md  manage.py  pubspec.yaml  pyproject.toml  run.sh  settings.py  test_config.py  test_curl.sh  test_mongo_connection.py
android/app/: build.gradle.kts
backend/: Dockerfile  README.md  api.py  manage.py  pyproject.toml  run_services.py  scheduler.py
backend/apis/: urls.py  views.py
backend/core/: apps.py  asgi.py  settings.py  urls.py  view.py  views.py
backend/voyeur/: apps.py  connect_metrics.py  consumers.py  customers.py  orm_metrics.py  save_metrics.py  scheduler.py  test_websocket.py
backend/voyeur/api/: __init__.py  apps.py  urls.py  views.py
backend/voyeur/core/: asgi.py  config.py  settings.py  urls.py
backend/voyeur/metrics/: apps.py  connect.py  consumers.py  routing.py  scheduler.py  store.py
consumer/: consumer.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/server/: index.js
frontend/src/: App.jsx
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
k8s/: consumer.py  deployment.yaml  voyeur-consumer.sh  voyeur-consumer.yaml
lib/: main.dart
lib/models/: character_videos.dart  person.dart  video_result.dart
lib/services/: app_config.dart  asset_cache_manager.dart  people_service.dart  video_cache_manager.dart  video_prober.dart
lib/viewmodels/: dance_viewmodel.dart
lib/views/: card_swipe_view.dart  people_gallery_view.dart  video_card_view.dart  video_player_view.dart  welcome_view.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
metrics/: config.py  connect.py  store.py
native_backup/voyeur/: AppConfig.swift  ContentView.swift  DanceViewModel.swift  SettingsView.swift  VideoCacheManager.swift  voyeurApp.swift
native_backup/voyeur.xcodeproj/: project.pbxproj  project.pbxproj.bak
native_backup/voyeurUITests/: voyeurUITests.swift
test/: widget_test.dart
tests/: WEBSOCKET_SETUP.md  test_config.py  test_curl.sh  test_mongodb_connection.py  test_simple_config.py  test_tymb_curl.sh  test_websocket_client.py  test_websocket_config.py  test_websocket_curl.sh  tymb_simple_client.py
visit/: apps.py  config.py  dao.py  producer.py  urls.py  views.py
voyeur/: AppConfig.swift  ContentView.swift  DanceVideoListView.swift  DanceViewModel.swift  Item.swift  SettingsView.swift  asgi.py  settings.py  urls.py  wsgi.py
voyeur/Services/: PeopleService.swift  VideoProber.swift
voyeur/Views/: CardSwipeView.swift  VideoCardView.swift  VideoThumbnailView.swift  WelcomeView.swift
voyeurTests/: voyeurTests.swift
voyeurUITests/: voyeurUITestsLaunchTests.swift
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+12 files in other folders)
