[tool.poetry]
name = "voyeur"
version = "0.1.0"
description = "A Django-based metrics collection and API service"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^5.0.2"
pymongo = "^4.6.2"
stomp-py = "^8.1.0"
websocket-client = "^1.7.0"
python-dotenv = "^1.0.1"
channels = "^4.0.0"
daphne = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 